actividad_combinacion_if_for_switch/CombinationLangParser.py
# Generated from CombinationLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CombinationLangParser ( Parser ):

    grammarFileName = "CombinationLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'if'", "'switch'", "'case'", 
                     "'default'", "'('", "')'", "'{'", "'}'", "':'", "';'", 
                     "'='", "'*'", "'/'", "'+'", "'-'", "'>'", "'<'", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "FOR", "IF", "SWITCH", "CASE", "DEFAULT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COLON", "SEMI", 
                      "ASSIGN", "MUL", "DIV", "PLUS", "MINUS", "GT", "LT", 
                      "EQ", "NEQ", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_asignacion = 2
    RULE_forStmt = 3
    RULE_condicion = 4
    RULE_paso = 5
    RULE_switchStmt = 6
    RULE_case = 7
    RULE_default = 8
    RULE_ifStmt = 9

    ruleNames =  [ "programa", "sentencia", "asignacion", "forStmt", "condicion", 
                   "paso", "switchStmt", "case", "default", "ifStmt" ]

    EOF = Token.EOF
    FOR=1
    IF=2
    SWITCH=3
    CASE=4
    DEFAULT=5
    LPAREN=6
    RPAREN=7
    LBRACE=8
    RBRACE=9
    COLON=10
    SEMI=11
    ASSIGN=12
    MUL=13
    DIV=14
    PLUS=15
    MINUS=16
    GT=17
    LT=18
    EQ=19
    NEQ=20
    ID=21
    INT=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CombinationLangParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = CombinationLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.sentencia()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2097166) != 0)):
                    break

            self.state = 25
            self.match(CombinationLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(CombinationLangParser.AsignacionContext,0)


        def SEMI(self):
            return self.getToken(CombinationLangParser.SEMI, 0)

        def forStmt(self):
            return self.getTypedRuleContext(CombinationLangParser.ForStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(CombinationLangParser.SwitchStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(CombinationLangParser.IfStmtContext,0)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = CombinationLangParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 33
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.asignacion()
                self.state = 28
                self.match(CombinationLangParser.SEMI)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.forStmt()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.switchStmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.ifStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangParser.ID)
            else:
                return self.getToken(CombinationLangParser.ID, i)

        def ASSIGN(self):
            return self.getToken(CombinationLangParser.ASSIGN, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangParser.INT)
            else:
                return self.getToken(CombinationLangParser.INT, i)

        def MUL(self):
            return self.getToken(CombinationLangParser.MUL, 0)

        def DIV(self):
            return self.getToken(CombinationLangParser.DIV, 0)

        def PLUS(self):
            return self.getToken(CombinationLangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(CombinationLangParser.MINUS, 0)

        def getRuleIndex(self):
            return CombinationLangParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = CombinationLangParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(CombinationLangParser.ID)
                self.state = 36
                self.match(CombinationLangParser.ASSIGN)
                self.state = 37
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(CombinationLangParser.ID)
                self.state = 39
                self.match(CombinationLangParser.ASSIGN)
                self.state = 40
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 41
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 42
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CombinationLangParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangParser.LPAREN, 0)

        def asignacion(self):
            return self.getTypedRuleContext(CombinationLangParser.AsignacionContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangParser.SEMI)
            else:
                return self.getToken(CombinationLangParser.SEMI, i)

        def condicion(self):
            return self.getTypedRuleContext(CombinationLangParser.CondicionContext,0)


        def paso(self):
            return self.getTypedRuleContext(CombinationLangParser.PasoContext,0)


        def RPAREN(self):
            return self.getToken(CombinationLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = CombinationLangParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(CombinationLangParser.FOR)
            self.state = 46
            self.match(CombinationLangParser.LPAREN)
            self.state = 47
            self.asignacion()
            self.state = 48
            self.match(CombinationLangParser.SEMI)
            self.state = 49
            self.condicion()
            self.state = 50
            self.match(CombinationLangParser.SEMI)
            self.state = 51
            self.paso()
            self.state = 52
            self.match(CombinationLangParser.RPAREN)
            self.state = 53
            self.match(CombinationLangParser.LBRACE)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2097166) != 0):
                self.state = 54
                self.sentencia()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(CombinationLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangParser.ID)
            else:
                return self.getToken(CombinationLangParser.ID, i)

        def INT(self):
            return self.getToken(CombinationLangParser.INT, 0)

        def GT(self):
            return self.getToken(CombinationLangParser.GT, 0)

        def LT(self):
            return self.getToken(CombinationLangParser.LT, 0)

        def EQ(self):
            return self.getToken(CombinationLangParser.EQ, 0)

        def NEQ(self):
            return self.getToken(CombinationLangParser.NEQ, 0)

        def getRuleIndex(self):
            return CombinationLangParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = CombinationLangParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(CombinationLangParser.ID)
            self.state = 63
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 64
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangParser.ID)
            else:
                return self.getToken(CombinationLangParser.ID, i)

        def ASSIGN(self):
            return self.getToken(CombinationLangParser.ASSIGN, 0)

        def INT(self):
            return self.getToken(CombinationLangParser.INT, 0)

        def MUL(self):
            return self.getToken(CombinationLangParser.MUL, 0)

        def DIV(self):
            return self.getToken(CombinationLangParser.DIV, 0)

        def PLUS(self):
            return self.getToken(CombinationLangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(CombinationLangParser.MINUS, 0)

        def getRuleIndex(self):
            return CombinationLangParser.RULE_paso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso" ):
                listener.enterPaso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso" ):
                listener.exitPaso(self)




    def paso(self):

        localctx = CombinationLangParser.PasoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paso)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(CombinationLangParser.ID)
            self.state = 67
            self.match(CombinationLangParser.ASSIGN)
            self.state = 68
            self.match(CombinationLangParser.ID)
            self.state = 69
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(CombinationLangParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangParser.LPAREN, 0)

        def ID(self):
            return self.getToken(CombinationLangParser.ID, 0)

        def RPAREN(self):
            return self.getToken(CombinationLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangParser.RBRACE, 0)

        def case(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.CaseContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.CaseContext,i)


        def default(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.DefaultContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.DefaultContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_switchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStmt" ):
                listener.enterSwitchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStmt" ):
                listener.exitSwitchStmt(self)




    def switchStmt(self):

        localctx = CombinationLangParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(CombinationLangParser.SWITCH)
            self.state = 73
            self.match(CombinationLangParser.LPAREN)
            self.state = 74
            self.match(CombinationLangParser.ID)
            self.state = 75
            self.match(CombinationLangParser.RPAREN)
            self.state = 76
            self.match(CombinationLangParser.LBRACE)
            self.state = 79 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 77
                    self.case()
                    pass
                elif token in [5]:
                    self.state = 78
                    self.default()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==5):
                    break

            self.state = 83
            self.match(CombinationLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(CombinationLangParser.CASE, 0)

        def INT(self):
            return self.getToken(CombinationLangParser.INT, 0)

        def COLON(self):
            return self.getToken(CombinationLangParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_case

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase" ):
                listener.enterCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase" ):
                listener.exitCase(self)




    def case(self):

        localctx = CombinationLangParser.CaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_case)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(CombinationLangParser.CASE)
            self.state = 86
            self.match(CombinationLangParser.INT)
            self.state = 87
            self.match(CombinationLangParser.COLON)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2097166) != 0):
                self.state = 88
                self.sentencia()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(CombinationLangParser.DEFAULT, 0)

        def COLON(self):
            return self.getToken(CombinationLangParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_default

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefault" ):
                listener.enterDefault(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefault" ):
                listener.exitDefault(self)




    def default(self):

        localctx = CombinationLangParser.DefaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_default)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(CombinationLangParser.DEFAULT)
            self.state = 95
            self.match(CombinationLangParser.COLON)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2097166) != 0):
                self.state = 96
                self.sentencia()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CombinationLangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(CombinationLangParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(CombinationLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = CombinationLangParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CombinationLangParser.IF)
            self.state = 103
            self.match(CombinationLangParser.LPAREN)
            self.state = 104
            self.condicion()
            self.state = 105
            self.match(CombinationLangParser.RPAREN)
            self.state = 106
            self.match(CombinationLangParser.LBRACE)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2097166) != 0):
                self.state = 107
                self.sentencia()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(CombinationLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





